# SudokuSolver

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  pic.qrc  pic.rc  sudokusolver.cpp  sudokusolver.h
